[tool.poetry]
name = "card-chatbot"
version = "0.1.0"
description = ""
authors = ["Hoon Choi <santony.choi@gmail.com>"]
readme = "README.md"
packages = [{include = "card_chatbot"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
openai = "^0.27.4"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
